Added resume page

--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
                     <a href="/about.html" title="About Laurel">About</a>
                 </li>
                 <li>
-                    <a href="/work.html" title="Laurel's work">Work</a>
+                    <a href="/work.html" title="Laurel's resume">Resume</a>
                 </li>
                 <li class="active">
                     <a href="/contact.html" title="Contact Laurel">Contact</a>
