--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <a href="/about.html" title="About Laurel">About</a>
                 </li>
                 <li>
-                    <a href="/work.html" title="Laurel's work">Work</a>
+                    <a href="/work.html" title="Laurel's resume">Resume</a>
                 </li>
                 <li>
                     <a href="/contact.html" title="Contact Laurel">Contact</a>
@@ -145,6 +145,33 @@
                         </a>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="row mb-5 align-items-center">
+            <div class="col">
+                <div class="project-description">
+                    <h2 class="mb-5">World Clock Project</h2>
+                    <p class="mb-5 text-muted">
+                        With this world clock, users can find the time in cities around the world.
+                    </p>
+                    <div class="mb-5">
+                        <span class="skill">Moment.js</span>
+                        <span class="skill">Bootstrap</span>
+                        <span class="skill">HTML</span>
+                        <span class="skill">CSS</span>
+                        <span class="skill">JavaScript</span>
+                    </div>
+                    <div class="learn-more d-flex align-items-center">
+                        <a href="https://world-clock-lr.netlify.app/" class="btn btn-branding me-4">Launch
+                            Project</a>
+                        <a href="https://github.com/LaurelFR/world-clock" target="_blank" title="GitHub repository">
+                            <i class="fab fa-github github-project"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col d-none d-lg-block project">
+                <img src="/images/worldclock.png" class="img-fluid project-preview" alt="Dictionary app preview">
             </div>
         </div>
         <footer>
