--- a/work.html
+++ b/work.html
@@ -34,7 +34,7 @@
                     <a href="/about.html" title="About Laurel">About</a>
                 </li>
                 <li class="active">
-                    <a href="/work.html" title="Laurel's work">Work</a>
+                    <a href="/work.html" title="Laurel's resume">Resume</a>
                 </li>
                 <li>
                     <a href="/contact.html" title="Contact Laurel">Contact</a>
@@ -44,60 +44,112 @@
     </div>
     <div class="content-container container">
         <div class="content">
-            <h1 class="mb-5">Take a look at what I've been working on!</h1>
-            <div class="row justify-content-center">
-                <div class="col-md-6 mb-4">
-                    <img src="/images/weatherapp.png" class="img-fluid mb-3 rounded" alt="Weather app preview">
-                    <h3 class="text-center m-0">Weather App</h3>
-                    <p class="text-center text-muted">Built with React.js, Bootstrap, HTML and CSS</p>
-                    <div class="text-center mt-4 mb-5">
-                        <a href="https://react-weather-app-lfr.netlify.app/" class="btn btn-branding launch-button"
-                            target="_blank">Launch
-                            Project</a>
+            <div class="resume">
+                <h1 class="text-center">Laurel Rubel</h1>
+                <h2 class="text-center mb-5">Front-End Developer</h2>
+                <div class="row">
+                    <div class="col-lg-4 column-one">
+                        <h3>CONTACT</h3>
+                        <ul>
+                            <li>Laurel.Rubel@gmail.com</li>
+                            <li>Denver, CO</li>
+                            <li>LaurelRubel.com</li>
+                            <li><a href="https://www.linkedin.com/in/laurelrubel/" target="_blank">
+                                    linkedin.com/in/LaurelRubel
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://github.com/LaurelFR" target="_blank">
+                                    GitHub.com/LaurelFR
+                                </a>
+                            </li>
+                        </ul>
+                        <br />
+                        <h3>SKILLS</h3>
+                        <ul>
+                            <li>JavaScript</li>
+                            <li>HTML + CSS</li>
+                            <li>React</li>
+                            <li>Bootstrap</li>
+                            <li>Git/GitHub</li>
+                            <li>VSCode</li>
+                            <li>Responsive Development</li>
+                        </ul>
+                        <br />
+                        <h3>EDUCATION</h3>
+                        <ul>
+                            <li>Certification</li>
+                            <li>Front-End Development</li>
+                            <li class="fw-bold">SheCodes</li>
+                            <li>2023</li>
+                        </ul>
+                        <br />
+                        <ul>
+                            <li>45 credits towards</li>
+                            <li>Master of Arts,</li>
+                            <li>Counseling Psychology</li>
+                            <li class="fw-bold">University of Denver</li>
+                            <li>2021-2022</li>
+                        </ul>
+                        <br />
+                        <ul>
+                            <li>Bachelor of Arts,</li>
+                            <li>Psychology</li>
+                            <li>Honors: cum laude</li>
+                            <li>(GPA: 3.96)</li>
+                            <li>Dean's List</li>
+                            <li class="fw-bold">University of Denver</li>
+                            <li>2016-2020</li>
+                        </ul>
+                        <br />
+                    </div>
+                    <div class="col-lg-7 ms-5">
+                        <h3>PROFILE</h3>
+                        <p>
+                            Front-End Developer with a passion for coding ready to join a development team. I attended a
+                            300+ hour coding bootcamp
+                            to learn new languages and skills. I value collaboration, positive communication, and active
+                            listening.
+                        </p>
+                        <h3>PROJECTS</h3>
+                        <h4>Weather App, 2023</h4>
+                        <p class="mb-0">Designer, Developer</p>
+                        <ul class="project-bullets">
+                            <li>Built a SPA (single-page application) to allow users to search for current and
+                                forecasted weather data in any city.</li>
+                            <li>Used the SheCodes weather API to retrieve weather data.</li>
+                            <li>Used React States to manage changing data.</li>
+                        </ul>
+                        <h4>Dictionary App, 2023</h4>
+                        <p class="mb-0">Designer, Developer</p>
+                        <ul class="project-bullets">
+                            <li>Built a SPA to allow users to find the definition of a word, example sentences,
+                                synonyms, and photos.</li>
+                            <li>Used the SheCodes dictionary API and images API to retrieve data.</li>
+                            <li>Used React States to manage changing data.</li>
+                        </ul>
+                        <h3>WORK EXPERIENCE</h3>
+                        <h4>Office Assistant</h4>
+                        <p class="mb-0">Denver Audiology, LLC</p>
+                        <p class="mb-0">May 2019 - August 2019</p>
+                        <ul>
+                            <li>Fostered rapport with patients to enhance their clinic experience.</li>
+                            <li>Efficiently managed the front desk by answering the phone, scheduling and confirming
+                                appointments, and
+                                relaying messages to doctor.</li>
+                            <li>Digitized and organized calendar and patient data entries and files from previous years.
+                            </li>
+                            <li>Systematized and restructured folders and documents in file cabinets alphabetically and
+                                chronologically to
+                                fully digitize all patient files.</li>
+                            <li>Provided technical support.</li>
+                        </ul>
                     </div>
                 </div>
-                <div class="col-md-6 mb-4">
-                    <img src="/images/dictionaryapp.png" class="img-fluid mb-3 rounded"
-                        alt="Dictionary project preview">
-                    <h3 class="text-center m-0">Dictionary App</h3>
-                    <p class="text-center text-muted">Built with React.js, Bootstrap, HTML and CSS</p>
-                    <div class="text-center mt-4 mb-5">
-                        <a href="https://react-dictionary-app-lfr.netlify.app/" class="btn btn-branding launch-button"
-                            target="_blank">Launch
-                            Project</a>
-                    </div>
-                </div>
-                <div class="col-md-6 mb-4">
-                    <img src="/images/travel.png" class="img-fluid mb-3 rounded" alt="Travel project preview">
-                    <h3 class="text-center m-0">Travel Landing Page</h3>
-                    <p class="text-center text-muted">Built with Bootstrap, HTML and CSS</p>
-                    <div class="text-center mt-4 mb-5">
-                        <a href="https://denver-travel-website.netlify.app/" class="btn btn-branding launch-button"
-                            target="_blank">Launch
-                            Project</a>
-                    </div>
-                </div>
-                <div class="col-md-6 mb-4">
-                    <img src="/images/worldclock.png" class="img-fluid mb-3 rounded" alt="World clock project preview">
-                    <h3 class="text-center m-0">World Clock Project</h3>
-                    <p class="text-center text-muted">Built with Moment.js, HTML, CSS and JavaScript</p>
-                    <div class="text-center mt-4 mb-5">
-                        <a href="https://world-clock-lr.netlify.app/" class="btn btn-branding launch-button"
-                            target="_blank">Launch
-                            Project</a>
-                    </div>
-                </div>
-                <div class="col-md-6 mb-4">
-                    <img src="/images/randomquotes.png" class="img-fluid mb-3 rounded"
-                        alt="Random quotes generator project preview">
-                    <h3 class="text-center m-0">Random Quotes Generator</h3>
-                    <p class="text-center text-muted">Built with React.js, Bootstrap, HTML and CSS</p>
-                    <div class="text-center mt-4 mb-5">
-                        <a href="https://random-quotes-generator-lfr.netlify.app/"
-                            class="btn btn-branding launch-button" target="_blank">Launch
-                            Project</a>
-                    </div>
-                </div>
+            </div>
+            <div class="mt-5 text-center">
+                <a href="images/Laurel-Rubel-resume.pdf" target="_blank" class="btn btn-branding"
+                    title="Contact Laurel">Resume PDF</a>
             </div>
         </div>
         <footer>
