Added responsive styling

--- a/work.html
+++ b/work.html
@@ -103,7 +103,7 @@
                         </ul>
                         <br />
                     </div>
-                    <div class="col-lg-7 ms-5">
+                    <div class="col-lg-7 column-two">
                         <h3>PROFILE</h3>
                         <p>
                             Front-End Developer with a passion for coding ready to join a development team. I attended a
