Added card sort project

--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
                 <div class="see-projects">
                     <div class="row">
                         <div class="col">
-                            <a href="/work.html" class="btn btn-branding">See my projects</a>
+                            <a href="/" class="btn btn-branding">See my projects</a>
                         </div>
                         <div class="col">
                             <a href="/images/Laurel-Rubel-resume.pdf" target="_blank" class="btn btn-branding">See my
