--- a/index.html
+++ b/index.html
@@ -60,6 +60,35 @@
     <p class="text-center m-5 check-out">Check out some of my featured projects below!</p>
     <div class="container">
         <div class="row mb-5 align-items-center">
+            <div class="col">
+                <div class="project-description">
+                    <h2 class="mb-5">Values Card Sort</h2>
+                    <p class="mb-5 text-muted">
+                        Users can complete a personal values card sort online, improving accessibility to a therapeutic
+                        activity traditionally
+                        done in person. Features include user instructions, the option to add additional values, and a
+                        summary to view user results.
+                    </p>
+                    <div class="mb-5">
+                        <span class="skill">React.js</span>
+                        <span class="skill">Bootstrap</span>
+                        <span class="skill">HTML</span>
+                        <span class="skill">CSS</span>
+                    </div>
+                    <div class="learn-more d-flex align-items-center">
+                        <a href="https://values-cards.netlify.app/" class="btn btn-branding me-4" target="_blank">Launch
+                            Project</a>
+                        <a href="https://github.com/LaurelFR/values-cards" target="_blank" title="GitHub repository">
+                            <i class="fab fa-github github-project"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col d-none d-lg-block project">
+                <img src="/images/valuescards.png" class="img-fluid project-preview" alt="Values Card sort app preview">
+            </div>
+        </div>
+        <div class="row mb-5 align-items-center">
             <div class="col d-none d-lg-block project">
                 <img src="/images/weatherapp.png" class="img-fluid project-preview" alt="Weather project preview">
             </div>
