--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             </div>
             <p class="text-center mt-5">
                 ✌️ This website was coded by Laurel Rubel and is
-                <a href="https://github.com/LaurelFR/portfolio-lfr">open-sourced on GitHub</a>
+                <a href="https://github.com/LaurelFR/portfolio-lfr" target="_blank">open-sourced on GitHub</a>
             </p>
         </footer>
     </div>
